Fixes #745 selected items get higher z-index

--- a/src/client/js/Widgets/DiagramDesigner/styles/DiagramDesignerWidget.scss
+++ b/src/client/js/Widgets/DiagramDesigner/styles/DiagramDesignerWidget.scss
@@ -46,6 +46,9 @@ $tabs-container-height: 26px;
     .designer-item,
     .designer-connection {
       cursor: pointer;
+      &.selected {
+        z-index: 1;
+      }
     }
 
     .rubberband {
